--- a/captcha.html
+++ b/captcha.html
@@ -27,9 +27,14 @@
 </head>
 <body>
     <div class="code">
+		<!--
         <input type="text" value="" placeholder="请输入验证码（不区分大小写）" class="input-val">
         <canvas id="canvas" width="60" height="25"></canvas>
         <button class="btn">提交</button>
+		-->
+		
+		<p>宝谕是大笨蛋</p>
+		<p>大笨蛋是宝谕</p>
     </div>
 <script src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/js/lib/jquery-1.10.2_1c4228b8.js"></script>
 <script>
