--- a/captcha.html
+++ b/captcha.html
@@ -65,6 +65,7 @@
 		<button>点这里</button>
 		
 		<p>回我微信！</p>
+		<p>爱你哟</p>
     </div>
 <script src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/js/lib/jquery-1.10.2_1c4228b8.js"></script>
 <script>
@@ -106,6 +107,7 @@
 		$("button:eq(5)").click(function(){
 			$("button:eq(5)").hide(1000);
 			$("p:eq(7)").show(1000);
+			$("p:eq(8)").show(6000);
 			$("button:eq(6)").show(1000);
 		});
 	});
