--- a/baoyu.html
+++ b/baoyu.html
@@ -45,8 +45,8 @@
         <button class="btn">提交</button>
 		-->
 		
-		<p>宝谕是大笨蛋</p>
-		<p>大笨蛋是宝谕</p>
+		<p>宝瑜是大笨蛋</p>
+		<p>大笨蛋是宝瑜</p>
 		<button>点这里</button>
 		
 		<p>肚子好点没有</p>
