Update and rename baoyu.html to xingzi.html

--- a/xingzi.html
+++ b/xingzi.html
@@ -45,8 +45,8 @@
         <button class="btn">提交</button>
 		-->
 		
-		<p>宝瑜是大笨蛋</p>
-		<p>大笨蛋是宝瑜</p>
+		<p>臭宝是大笨蛋</p>
+		<p>大笨蛋是臭宝</p>
 		<button>点这里</button>
 		
 		<p>肚子好点没有</p>
