--- a/xingzi.html
+++ b/xingzi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BaoYu</title>
+    <title>Xingzi</title>
     <style>
       .input-val {
         width: 200px;
