--- a/xingzi.html
+++ b/xingzi.html
@@ -69,6 +69,7 @@
 		
 		<p>祝臭宝六一快乐</p>
 		<p>臭宝的臭宝</p>
+                <p>爱你的臭宝</p>
     </div>
 <script src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/js/lib/jquery-1.10.2_1c4228b8.js"></script>
 <script>
@@ -122,6 +123,9 @@
 			$("button:eq(5)").hide(1000);
 			$("p:eq(10)").show(6000);
 			$("p:eq(11)").show(12000);
+		});
+		$("p:eq(11)").click(function(){
+			$("p:eq(12)").show(12000);
 		});
 	});
 </script>
