--- a/xingzi.html
+++ b/xingzi.html
@@ -69,7 +69,11 @@
 		
 		<p>祝臭宝六一快乐</p>
 		<p>臭宝的臭宝</p>
-                <p>爱你的臭宝</p>
+                <p>要做一辈子的臭宝</p>
+		<p>真的想好了吗</p>
+		<p>不再考虑一下</p>
+		<p>我会永远爱你</p>
+		<p>臭宝留</p>
     </div>
 <script src="https://ss0.bdstatic.com/5aV1bjqh_Q23odCf/static/superman/js/lib/jquery-1.10.2_1c4228b8.js"></script>
 <script>
