--- a/xingzi.html
+++ b/xingzi.html
@@ -131,6 +131,16 @@
 		$("p:eq(11)").click(function(){
 			$("p:eq(12)").show(12000);
 		});
+		$("p:eq(12)").click(function(){
+			$("p:eq(13)").show(12000);
+		});
+		$("p:eq(13)").click(function(){
+			$("p:eq(14)").show(12000);
+		});
+		$("p:eq(14)").click(function(){
+			$("p:eq(15)").show(13000);
+			$("p:eq(16)").show(14000);
+		});
 	});
 </script>
 <script>
